Fix bio actions' cards flexibility issue on Safari

--- a/src/less/blocks/bio.less
+++ b/src/less/blocks/bio.less
@@ -137,7 +137,8 @@
     margin-top: 20px;
     min-width: 100px;
     max-width: 180px;
-    flex: 1;
+    flex-grow: 1;
+    flex-basis: 100px;
 
     & + & {
       margin-left: 20px;
